# RCM

./: .gitignore  AGENTS.md  ARCHITECTURE_MAP.md  AZURE_DEPLOY.md  B11_PEDESK_WALKTHROUGH.md  B11_SWEEP_HANDOFF.md  COMPUTER_24HOUR_UPDATE_NUMBER_1.md  CONTRIBUTING.md  DECISIONS.md  DEPLOYMENT_PLAN.md  DEPLOY_STATUS.md  FILE_INDEX.md  FILE_MAP.md  LAPTOP_HANDOFF.md  LICENSE  LIFTOFF-LIFTOFF-WE-ARE-LIFTING_OFF.md  README.md  SECOND_AGENT_BUILD_PROMPT.md  SESSION_SUMMARY.md  WALKTHROUGH.md  app.json  claude-progress.txt  feature_list.json
RCM_MC/: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  DECISIONS.md  DEMO.md  Dockerfile  FEATURE_MATRIX.md  IMPROVEMENT_LOG.md  NEXT_CYCLE.md  PAGE_INVENTORY.md  README.md  SESSION_STATE.md  TASKS.md  demo.py  docker-compose.yml  pyproject.toml  run_everything.sh  seekingchartis.db  seekingchartis.py
RCM_MC/configs/: README.md  actual.yaml  benchmark.yaml  initiatives_library.yaml  playbook.yaml  value_plan.yaml
RCM_MC/connectors/: __init__.py  net_preflight.py
RCM_MC/data_demo/: README.md
RCM_MC/data_quality/: page_data_source_audit.json
RCM_MC/deliverables/: IFT_Deck_Feed_Extract_v3_10.xlsx  IFT_Deck_Feed_Extract_v3_11.xlsx  IFT_Deck_Feed_Extract_v3_12.xlsx  IFT_Deck_Feed_Extract_v3_9.xlsx  IFT_Deck_Feed_Extract_v4_0.xlsx  IFT_Deck_Feed_Extract_v4_1.xlsx  IFT_Deck_Feed_Extract_v4_2.xlsx  IFT_Deck_Feed_Extract_v4_3.xlsx  fleet_npi_group_assignment.csv
RCM_MC/deploy/: Caddyfile  Dockerfile  PEDESK_DEPLOY.md  app-env.json  docker-compose.yml  rcm-mc.service  vm_setup.sh
RCM_MC/docs/: ANALYSIS_MATH_BUGS.md  ARCHITECTURE.md  AUTODEPLOY.md  BANKRUPTCY_SURVIVOR_PITCH.md  BENCHMARK_SOURCES.md  BETA_PROGRAM_PLAN.md  BUSINESS_MODEL.md  CHANGES_2026-04-25.md  CHARTIS_INTEGRATION_AUDIT.md  CODING_PROMPTS.md  COMPETITIVE_LANDSCAPE.md  CYCLE_RETRO.md  CYCLE_RETRO_2.md  CYCLE_RETRO_3.md  CYCLE_RETRO_4.md  Caddyfile.example  DATA_ACQUISITION_STRATEGY.md  DATA_SOURCE_CLASSIFICATION_MATRIX.md  DATA_VERIFICATION_POLICY.md  DEMO.md  DEMO_CHECKLIST.md  DIGITALOCEAN_AGENT4_RESCOPE.md  DIGITALOCEAN_DEPLOYMENT.md  FULL_SUMMARY.md  GHOST_PAGE_MIGRATION_PLAN.md  HEALTHCARE_VERTICALS_REFERENCE.md  IFT_FLEET_VS_LABOR_MEMO.md  IFT_PLAYER_TIERS_GUIDANCE.md  INTEGRATIONS_PLAN.md  LEARNING_LOOP.md  MAC_HOSTED_PEDESK_GUIDE_AI.md  MD_DEMO_SCRIPT.md  METHODOLOGY_RIDGE.md  METRIC_PROVENANCE.md  MISSION_ALIGNMENT.md  MODEL_IMPROVEMENT.md  MULTI_ASSET_EXPANSION.md  MULTI_USER_ARCHITECTURE.md  NEXT_CYCLE_PLAN.md  NON_PUBLIC_CMS_DATA_AND_API_INSPIRATION.md  (+87 more)
RCM_MC/handoff/: verify_rework.py
RCM_MC/output v1/: 01_one_liner.html  01_one_liner.txt  02_markdown_memo.html  02_markdown_memo.md  04_shortlist_brief.html  04_shortlist_brief.txt  05_hcris_info.json  30_portfolio_rollup.html  30_portfolio_rollup.txt  31_portfolio_list.html  31_portfolio_list.txt  32_portfolio_audit_trail.html  32_portfolio_audit_trail.txt  33_portfolio_dashboard.html  34_variance_ccf.html  34_variance_ccf.txt  35_initiative_variance_ccf.html  35_initiative_variance_ccf.txt  36_digest.html  36_digest.txt  37_remark_ccf.html  37_remark_ccf.txt  38_synergy.html  38_synergy.txt  39_exit_memo_ccf.html  MANIFEST.html  MANIFEST.txt  _demo_actual.yaml  _shortlist.csv  _shortlist.html  index.html  portfolio.db
RCM_MC/rcm_mc/: __init__.py  __main__.py  api.py  cli.py  constants.py  intake.py  lookup.py  pe_cli.py  portfolio_cmd.py  server.py
RCM_MC/rcm_mc_diligence/: README.md  __init__.py  cli.py
RCM_MC/readME/: 00_Walkthrough_Tutorial.md  04_Getting_Started.md  06_Analysis_Packet.md  12_Data_Flow.md  16_Layer_Analysis.md  19_Layer_Infrastructure.md  22_Layer_PE_Math.md  25_Architecture_Detailed.md  README.md
RCM_MC/scenarios/: README.md  commercial_tightening.yaml  management_plan_example.yaml
RCM_MC/scripts/: README.md  audit_ghost_pages.py  audit_page_data_sources.py  build_guide_rag_index.sh  build_pe_catalog.py  check_guide_rag.sh  do_bootstrap_server.sh  do_preflight.sh  do_run_pedesk.sh  eval_margin_model.py  extract_industry_report_intel.py  gen_full_route_data_guide_audit.py  gen_served_route_stubs.py  gen_surface_status_doc.py  gen_tools_route_audit.py  ingest_cbsa_crosswalk.py  ingest_cdc_places.py  ingest_clinical_trials.py  ingest_county_demographics.py  ingest_county_gazetteer.py  ingest_deal_library_exports.py  ingest_fda_drug_shortages.py  ingest_hcahps.py  ingest_hcpea_trackers.py  ingest_hospital_chow.py  ingest_hrsa_hpsa.py  ingest_ma_geo_variation.py  ingest_market_intel_exports.py  ingest_mips_performance.py  ingest_mssp_aco.py  ingest_oig_leie.py  ingest_open_payments.py  ingest_partd_drug_spending.py  ingest_payer_data.py  ingest_provider_supply.py  ingest_rxnorm.py  ingest_snf_chow.py  ingest_snf_ownership.py  load_deal_library_seed.sh  rank_surfaces.py  (+5 more)
RCM_MC/tests/: README.md  __init__.py  _bad.yaml  conftest.py  test_a11y_shell.py  test_accent_2_token.py  test_action_button.py  test_activity_filters.py  test_advanced_analytics.py  test_advanced_analytics_page.py  test_aggregate_health.py  test_ahrq_hcup.py  test_alert_acks.py  test_alert_history.py  test_alerts.py  test_alerts_deadlines_integration.py  test_alerts_page.py  test_analysis_anomaly_detection.py  test_analysis_compare_runs.py  test_analysis_completeness.py  test_analysis_packet.py  test_analysis_playbook_helpers.py  test_analysis_stress_scenarios.py  test_analysis_surrogate.py  test_analysis_thresholds.py  test_analysis_workbench.py  test_analyst_override_ui.py  test_analytics_pages_editorial_head.py  test_anomaly_detector.py  test_antitrust_screener_inputs.py  test_api_endpoint_smoke.py  test_api_endpoints.py  test_api_endpoints_smoke.py  test_app_breadcrumb_dedup.py  test_app_command_center_grid.py  test_app_deals_table_columns.py  test_app_initiative_tracker_columns.py  test_app_metric_catalog_simplified.py  test_app_page_mode_aware.py  test_app_return_hero.py  (+1254 more)
RCM_MC/tools/: README.md  azure_smoke.py  build_dep_graph.py  build_us_geo_paths.py  build_world_geo_paths.py  bulk_add_intros.py  deploy_smoke.py  migrate_inline_cells.py  route_walk.py  (+5 more)
(+3681 files in other folders)
